src/y.output
Terminals unused in grammar

    ARROW
    QUOTE
    RESERVED


Grammar

    0 $accept: Main $end

    1 Main: Program

    2 Program: CLASS ID LBRACE Program2 RBRACE

    3 Program2: MethodDecl Program2
    4         | FieldDecl Program2
    5         | SEMICOLON Program2
    6         | ε

    7 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

    8 FieldDecl: PUBLIC STATIC Type ID FieldDecl2 SEMICOLON
    9          | error SEMICOLON

   10 FieldDecl2: COMMA ID FieldDecl2
   11           | ε

   12 Type: BOOL
   13     | INT
   14     | DOUBLE

   15 MethodHeader: Type ID LPAR FormalParams RPAR
   16             | Type ID LPAR RPAR
   17             | VOID ID LPAR FormalParams RPAR
   18             | VOID ID LPAR RPAR

   19 FormalParams: Type ID FormalParams2
   20             | STRING LSQ RSQ ID

   21 FormalParams2: COMMA Type ID FormalParams2
   22              | ε

   23 MethodBody: LBRACE MethodBody2 RBRACE

   24 MethodBody2: Statement MethodBody2
   25            | VarDecl MethodBody2
   26            | ε

   27 VarDecl: Type ID VarDecl2 SEMICOLON

   28 VarDecl2: COMMA ID VarDecl2
   29         | ε

   30 Statement: LBRACE Statement2 RBRACE
   31          | IF LPAR Expr RPAR Statement ELSE Statement
   32          | IF LPAR Expr RPAR Statement
   33          | WHILE LPAR Expr RPAR Statement
   34          | RETURN Expr SEMICOLON
   35          | RETURN SEMICOLON
   36          | MethodInvocation SEMICOLON
   37          | Assignment SEMICOLON
   38          | ParseArgs SEMICOLON
   39          | error SEMICOLON
   40          | SEMICOLON
   41          | PRINT LPAR Expr RPAR SEMICOLON
   42          | PRINT LPAR STRLIT RPAR SEMICOLON

   43 Statement2: Statement Statement2
   44           | ε

   45 MethodInvocation: ID LPAR RPAR
   46                 | ID LPAR error RPAR
   47                 | ID LPAR Expr MethodInvocation2 RPAR

   48 MethodInvocation2: COMMA Expr MethodInvocation2
   49                  | error
   50                  | ε

   51 Assignment: ID ASSIGN Expr

   52 ParseArgs: PARSEINT LPAR ID LSQ Expr RSQ RPAR
   53          | PARSEINT LPAR error RPAR

   54 Expr: Assignment
   55     | Expr1

   56 Expr1: Expr1 PLUS Expr1
   57      | Expr1 MINUS Expr1
   58      | Expr1 STAR Expr1
   59      | Expr1 DIV Expr1
   60      | Expr1 MOD Expr1
   61      | Expr1 AND Expr1
   62      | Expr1 OR Expr1
   63      | Expr1 XOR Expr1
   64      | Expr1 LSHIFT Expr1
   65      | Expr1 RSHIFT Expr1
   66      | Expr1 EQ Expr1
   67      | Expr1 GE Expr1
   68      | Expr1 GT Expr1
   69      | Expr1 LE Expr1
   70      | Expr1 LT Expr1
   71      | Expr1 NE Expr1
   72      | MINUS Expr1
   73      | NOT Expr1
   74      | PLUS Expr1
   75      | LPAR Expr RPAR
   76      | LPAR error RPAR
   77      | MethodInvocation
   78      | ParseArgs
   79      | ID DOTLENGTH
   80      | ID
   81      | INTLIT
   82      | REALLIT
   83      | BOOLLIT


Terminals, with rules where they appear

    $end (0) 0
    error (256) 9 39 46 49 53 76
    INTLIT <token> (258) 81
    STRLIT <token> (259) 42
    REALLIT <token> (260) 82
    ID <token> (261) 2 8 10 15 16 17 18 19 20 21 27 28 45 46 47 51 52 79 80
    IF <token> (262) 31 32
    ELSE <token> (263) 31
    WHILE <token> (264) 33
    RETURN <token> (265) 34 35
    BOOL <token> (266) 12
    CLASS <token> (267) 2
    DOUBLE <token> (268) 14
    INT <token> (269) 13
    PUBLIC <token> (270) 7 8
    STATIC <token> (271) 7 8
    STRING <token> (272) 20
    VOID <token> (273) 17 18
    EQ <token> (274) 66
    GE <token> (275) 67
    GT <token> (276) 68
    LT <token> (277) 70
    LE <token> (278) 69
    NE <token> (279) 71
    DOTLENGTH <token> (280) 79
    PRINT <token> (281) 41 42
    PARSEINT <token> (282) 52 53
    BOOLLIT <token> (283) 83
    AND <token> (284) 61
    NOT <token> (285) 73
    OR <token> (286) 62
    XOR <token> (287) 63
    MOD <token> (288) 60
    DIV <token> (289) 59
    STAR <token> (290) 58
    MINUS <token> (291) 57 72
    PLUS <token> (292) 56 74
    ASSIGN <token> (293) 51
    COMMA <token> (294) 10 21 28 48
    LBRACE <token> (295) 2 23 30
    LPAR <token> (296) 15 16 17 18 31 32 33 41 42 45 46 47 52 53 75 76
    LSQ <token> (297) 20 52
    RBRACE <token> (298) 2 23 30
    RPAR <token> (299) 15 16 17 18 31 32 33 41 42 45 46 47 52 53 75 76
    RSQ <token> (300) 20 52
    SEMICOLON <token> (301) 5 8 9 27 34 35 36 37 38 39 40 41 42
    LSHIFT <token> (302) 64
    RSHIFT <token> (303) 65
    ARROW <token> (304)
    QUOTE <token> (305)
    RESERVED <token> (306)
    NO_ELSE (307)


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    Main <node> (54)
        on left: 1
        on right: 0
    Program <node> (55)
        on left: 2
        on right: 1
    Program2 <node> (56)
        on left: 3 4 5 6
        on right: 2 3 4 5
    MethodDecl <node> (57)
        on left: 7
        on right: 3
    FieldDecl <node> (58)
        on left: 8 9
        on right: 4
    FieldDecl2 <node> (59)
        on left: 10 11
        on right: 8 10
    Type <node> (60)
        on left: 12 13 14
        on right: 8 15 16 19 21 27
    MethodHeader <node> (61)
        on left: 15 16 17 18
        on right: 7
    FormalParams <node> (62)
        on left: 19 20
        on right: 15 17
    FormalParams2 <node> (63)
        on left: 21 22
        on right: 19 21
    MethodBody <node> (64)
        on left: 23
        on right: 7
    MethodBody2 <node> (65)
        on left: 24 25 26
        on right: 23 24 25
    VarDecl <node> (66)
        on left: 27
        on right: 25
    VarDecl2 <node> (67)
        on left: 28 29
        on right: 27 28
    Statement <node> (68)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41 42
        on right: 24 31 32 33 43
    Statement2 <node> (69)
        on left: 43 44
        on right: 30 43
    MethodInvocation <node> (70)
        on left: 45 46 47
        on right: 36 77
    MethodInvocation2 <node> (71)
        on left: 48 49 50
        on right: 47 48
    Assignment <node> (72)
        on left: 51
        on right: 37 54
    ParseArgs <node> (73)
        on left: 52 53
        on right: 38 78
    Expr <node> (74)
        on left: 54 55
        on right: 31 32 33 34 41 47 48 51 52 75
    Expr1 <node> (75)
        on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83
        on right: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74


State 0

    0 $accept: • Main $end

    CLASS  shift, and go to state 1

    Main     go to state 2
    Program  go to state 3


State 1

    2 Program: CLASS • ID LBRACE Program2 RBRACE

    ID  shift, and go to state 4


State 2

    0 $accept: Main • $end

    $end  shift, and go to state 5


State 3

    1 Main: Program •

    $default  reduce using rule 1 (Main)


State 4

    2 Program: CLASS ID • LBRACE Program2 RBRACE

    LBRACE  shift, and go to state 6


State 5

    0 $accept: Main $end •

    $default  accept


State 6

    2 Program: CLASS ID LBRACE • Program2 RBRACE

    error      shift, and go to state 7
    PUBLIC     shift, and go to state 8
    SEMICOLON  shift, and go to state 9

    RBRACE  reduce using rule 6 (Program2)

    Program2    go to state 10
    MethodDecl  go to state 11
    FieldDecl   go to state 12


State 7

    9 FieldDecl: error • SEMICOLON

    SEMICOLON  shift, and go to state 13


State 8

    7 MethodDecl: PUBLIC • STATIC MethodHeader MethodBody
    8 FieldDecl: PUBLIC • STATIC Type ID FieldDecl2 SEMICOLON

    STATIC  shift, and go to state 14


State 9

    5 Program2: SEMICOLON • Program2

    error      shift, and go to state 7
    PUBLIC     shift, and go to state 8
    SEMICOLON  shift, and go to state 9

    RBRACE  reduce using rule 6 (Program2)

    Program2    go to state 15
    MethodDecl  go to state 11
    FieldDecl   go to state 12


State 10

    2 Program: CLASS ID LBRACE Program2 • RBRACE

    RBRACE  shift, and go to state 16


State 11

    3 Program2: MethodDecl • Program2

    error      shift, and go to state 7
    PUBLIC     shift, and go to state 8
    SEMICOLON  shift, and go to state 9

    RBRACE  reduce using rule 6 (Program2)

    Program2    go to state 17
    MethodDecl  go to state 11
    FieldDecl   go to state 12


State 12

    4 Program2: FieldDecl • Program2

    error      shift, and go to state 7
    PUBLIC     shift, and go to state 8
    SEMICOLON  shift, and go to state 9

    RBRACE  reduce using rule 6 (Program2)

    Program2    go to state 18
    MethodDecl  go to state 11
    FieldDecl   go to state 12


State 13

    9 FieldDecl: error SEMICOLON •

    $default  reduce using rule 9 (FieldDecl)


State 14

    7 MethodDecl: PUBLIC STATIC • MethodHeader MethodBody
    8 FieldDecl: PUBLIC STATIC • Type ID FieldDecl2 SEMICOLON

    BOOL    shift, and go to state 19
    DOUBLE  shift, and go to state 20
    INT     shift, and go to state 21
    VOID    shift, and go to state 22

    Type          go to state 23
    MethodHeader  go to state 24


State 15

    5 Program2: SEMICOLON Program2 •

    $default  reduce using rule 5 (Program2)


State 16

    2 Program: CLASS ID LBRACE Program2 RBRACE •

    $default  reduce using rule 2 (Program)


State 17

    3 Program2: MethodDecl Program2 •

    $default  reduce using rule 3 (Program2)


State 18

    4 Program2: FieldDecl Program2 •

    $default  reduce using rule 4 (Program2)


State 19

   12 Type: BOOL •

    $default  reduce using rule 12 (Type)


State 20

   14 Type: DOUBLE •

    $default  reduce using rule 14 (Type)


State 21

   13 Type: INT •

    $default  reduce using rule 13 (Type)


State 22

   17 MethodHeader: VOID • ID LPAR FormalParams RPAR
   18             | VOID • ID LPAR RPAR

    ID  shift, and go to state 25


State 23

    8 FieldDecl: PUBLIC STATIC Type • ID FieldDecl2 SEMICOLON
   15 MethodHeader: Type • ID LPAR FormalParams RPAR
   16             | Type • ID LPAR RPAR

    ID  shift, and go to state 26


State 24

    7 MethodDecl: PUBLIC STATIC MethodHeader • MethodBody

    LBRACE  shift, and go to state 27

    MethodBody  go to state 28


State 25

   17 MethodHeader: VOID ID • LPAR FormalParams RPAR
   18             | VOID ID • LPAR RPAR

    LPAR  shift, and go to state 29


State 26

    8 FieldDecl: PUBLIC STATIC Type ID • FieldDecl2 SEMICOLON
   15 MethodHeader: Type ID • LPAR FormalParams RPAR
   16             | Type ID • LPAR RPAR

    COMMA  shift, and go to state 30
    LPAR   shift, and go to state 31

    $default  reduce using rule 11 (FieldDecl2)

    FieldDecl2  go to state 32


State 27

   23 MethodBody: LBRACE • MethodBody2 RBRACE

    error      shift, and go to state 33
    ID         shift, and go to state 34
    IF         shift, and go to state 35
    WHILE      shift, and go to state 36
    RETURN     shift, and go to state 37
    BOOL       shift, and go to state 19
    DOUBLE     shift, and go to state 20
    INT        shift, and go to state 21
    PRINT      shift, and go to state 38
    PARSEINT   shift, and go to state 39
    LBRACE     shift, and go to state 40
    SEMICOLON  shift, and go to state 41

    RBRACE  reduce using rule 26 (MethodBody2)

    Type              go to state 42
    MethodBody2       go to state 43
    VarDecl           go to state 44
    Statement         go to state 45
    MethodInvocation  go to state 46
    Assignment        go to state 47
    ParseArgs         go to state 48


State 28

    7 MethodDecl: PUBLIC STATIC MethodHeader MethodBody •

    $default  reduce using rule 7 (MethodDecl)


State 29

   17 MethodHeader: VOID ID LPAR • FormalParams RPAR
   18             | VOID ID LPAR • RPAR

    BOOL    shift, and go to state 19
    DOUBLE  shift, and go to state 20
    INT     shift, and go to state 21
    STRING  shift, and go to state 49
    RPAR    shift, and go to state 50

    Type          go to state 51
    FormalParams  go to state 52


State 30

   10 FieldDecl2: COMMA • ID FieldDecl2

    ID  shift, and go to state 53


State 31

   15 MethodHeader: Type ID LPAR • FormalParams RPAR
   16             | Type ID LPAR • RPAR

    BOOL    shift, and go to state 19
    DOUBLE  shift, and go to state 20
    INT     shift, and go to state 21
    STRING  shift, and go to state 49
    RPAR    shift, and go to state 54

    Type          go to state 51
    FormalParams  go to state 55


State 32

    8 FieldDecl: PUBLIC STATIC Type ID FieldDecl2 • SEMICOLON

    SEMICOLON  shift, and go to state 56


State 33

   39 Statement: error • SEMICOLON

    SEMICOLON  shift, and go to state 57


State 34

   45 MethodInvocation: ID • LPAR RPAR
   46                 | ID • LPAR error RPAR
   47                 | ID • LPAR Expr MethodInvocation2 RPAR
   51 Assignment: ID • ASSIGN Expr

    ASSIGN  shift, and go to state 58
    LPAR    shift, and go to state 59


State 35

   31 Statement: IF • LPAR Expr RPAR Statement ELSE Statement
   32          | IF • LPAR Expr RPAR Statement

    LPAR  shift, and go to state 60


State 36

   33 Statement: WHILE • LPAR Expr RPAR Statement

    LPAR  shift, and go to state 61


State 37

   34 Statement: RETURN • Expr SEMICOLON
   35          | RETURN • SEMICOLON

    INTLIT     shift, and go to state 62
    REALLIT    shift, and go to state 63
    ID         shift, and go to state 64
    PARSEINT   shift, and go to state 39
    BOOLLIT    shift, and go to state 65
    NOT        shift, and go to state 66
    MINUS      shift, and go to state 67
    PLUS       shift, and go to state 68
    LPAR       shift, and go to state 69
    SEMICOLON  shift, and go to state 70

    MethodInvocation  go to state 71
    Assignment        go to state 72
    ParseArgs         go to state 73
    Expr              go to state 74
    Expr1             go to state 75


State 38

   41 Statement: PRINT • LPAR Expr RPAR SEMICOLON
   42          | PRINT • LPAR STRLIT RPAR SEMICOLON

    LPAR  shift, and go to state 76


State 39

   52 ParseArgs: PARSEINT • LPAR ID LSQ Expr RSQ RPAR
   53          | PARSEINT • LPAR error RPAR

    LPAR  shift, and go to state 77


State 40

   30 Statement: LBRACE • Statement2 RBRACE

    error      shift, and go to state 33
    ID         shift, and go to state 34
    IF         shift, and go to state 35
    WHILE      shift, and go to state 36
    RETURN     shift, and go to state 37
    PRINT      shift, and go to state 38
    PARSEINT   shift, and go to state 39
    LBRACE     shift, and go to state 40
    SEMICOLON  shift, and go to state 41

    RBRACE  reduce using rule 44 (Statement2)

    Statement         go to state 78
    Statement2        go to state 79
    MethodInvocation  go to state 46
    Assignment        go to state 47
    ParseArgs         go to state 48


State 41

   40 Statement: SEMICOLON •

    $default  reduce using rule 40 (Statement)


State 42

   27 VarDecl: Type • ID VarDecl2 SEMICOLON

    ID  shift, and go to state 80


State 43

   23 MethodBody: LBRACE MethodBody2 • RBRACE

    RBRACE  shift, and go to state 81


State 44

   25 MethodBody2: VarDecl • MethodBody2

    error      shift, and go to state 33
    ID         shift, and go to state 34
    IF         shift, and go to state 35
    WHILE      shift, and go to state 36
    RETURN     shift, and go to state 37
    BOOL       shift, and go to state 19
    DOUBLE     shift, and go to state 20
    INT        shift, and go to state 21
    PRINT      shift, and go to state 38
    PARSEINT   shift, and go to state 39
    LBRACE     shift, and go to state 40
    SEMICOLON  shift, and go to state 41

    RBRACE  reduce using rule 26 (MethodBody2)

    Type              go to state 42
    MethodBody2       go to state 82
    VarDecl           go to state 44
    Statement         go to state 45
    MethodInvocation  go to state 46
    Assignment        go to state 47
    ParseArgs         go to state 48


State 45

   24 MethodBody2: Statement • MethodBody2

    error      shift, and go to state 33
    ID         shift, and go to state 34
    IF         shift, and go to state 35
    WHILE      shift, and go to state 36
    RETURN     shift, and go to state 37
    BOOL       shift, and go to state 19
    DOUBLE     shift, and go to state 20
    INT        shift, and go to state 21
    PRINT      shift, and go to state 38
    PARSEINT   shift, and go to state 39
    LBRACE     shift, and go to state 40
    SEMICOLON  shift, and go to state 41

    RBRACE  reduce using rule 26 (MethodBody2)

    Type              go to state 42
    MethodBody2       go to state 83
    VarDecl           go to state 44
    Statement         go to state 45
    MethodInvocation  go to state 46
    Assignment        go to state 47
    ParseArgs         go to state 48


State 46

   36 Statement: MethodInvocation • SEMICOLON

    SEMICOLON  shift, and go to state 84


State 47

   37 Statement: Assignment • SEMICOLON

    SEMICOLON  shift, and go to state 85


State 48

   38 Statement: ParseArgs • SEMICOLON

    SEMICOLON  shift, and go to state 86


State 49

   20 FormalParams: STRING • LSQ RSQ ID

    LSQ  shift, and go to state 87


State 50

   18 MethodHeader: VOID ID LPAR RPAR •

    $default  reduce using rule 18 (MethodHeader)


State 51

   19 FormalParams: Type • ID FormalParams2

    ID  shift, and go to state 88


State 52

   17 MethodHeader: VOID ID LPAR FormalParams • RPAR

    RPAR  shift, and go to state 89


State 53

   10 FieldDecl2: COMMA ID • FieldDecl2

    COMMA  shift, and go to state 30

    $default  reduce using rule 11 (FieldDecl2)

    FieldDecl2  go to state 90


State 54

   16 MethodHeader: Type ID LPAR RPAR •

    $default  reduce using rule 16 (MethodHeader)


State 55

   15 MethodHeader: Type ID LPAR FormalParams • RPAR

    RPAR  shift, and go to state 91


State 56

    8 FieldDecl: PUBLIC STATIC Type ID FieldDecl2 SEMICOLON •

    $default  reduce using rule 8 (FieldDecl)


State 57

   39 Statement: error SEMICOLON •

    $default  reduce using rule 39 (Statement)


State 58

   51 Assignment: ID ASSIGN • Expr

    INTLIT    shift, and go to state 62
    REALLIT   shift, and go to state 63
    ID        shift, and go to state 64
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 65
    NOT       shift, and go to state 66
    MINUS     shift, and go to state 67
    PLUS      shift, and go to state 68
    LPAR      shift, and go to state 69

    MethodInvocation  go to state 71
    Assignment        go to state 72
    ParseArgs         go to state 73
    Expr              go to state 92
    Expr1             go to state 75


State 59

   45 MethodInvocation: ID LPAR • RPAR
   46                 | ID LPAR • error RPAR
   47                 | ID LPAR • Expr MethodInvocation2 RPAR

    error     shift, and go to state 93
    INTLIT    shift, and go to state 62
    REALLIT   shift, and go to state 63
    ID        shift, and go to state 64
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 65
    NOT       shift, and go to state 66
    MINUS     shift, and go to state 67
    PLUS      shift, and go to state 68
    LPAR      shift, and go to state 69
    RPAR      shift, and go to state 94

    MethodInvocation  go to state 71
    Assignment        go to state 72
    ParseArgs         go to state 73
    Expr              go to state 95
    Expr1             go to state 75


State 60

   31 Statement: IF LPAR • Expr RPAR Statement ELSE Statement
   32          | IF LPAR • Expr RPAR Statement

    INTLIT    shift, and go to state 62
    REALLIT   shift, and go to state 63
    ID        shift, and go to state 64
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 65
    NOT       shift, and go to state 66
    MINUS     shift, and go to state 67
    PLUS      shift, and go to state 68
    LPAR      shift, and go to state 69

    MethodInvocation  go to state 71
    Assignment        go to state 72
    ParseArgs         go to state 73
    Expr              go to state 96
    Expr1             go to state 75


State 61

   33 Statement: WHILE LPAR • Expr RPAR Statement

    INTLIT    shift, and go to state 62
    REALLIT   shift, and go to state 63
    ID        shift, and go to state 64
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 65
    NOT       shift, and go to state 66
    MINUS     shift, and go to state 67
    PLUS      shift, and go to state 68
    LPAR      shift, and go to state 69

    MethodInvocation  go to state 71
    Assignment        go to state 72
    ParseArgs         go to state 73
    Expr              go to state 97
    Expr1             go to state 75


State 62

   81 Expr1: INTLIT •

    $default  reduce using rule 81 (Expr1)


State 63

   82 Expr1: REALLIT •

    $default  reduce using rule 82 (Expr1)


State 64

   45 MethodInvocation: ID • LPAR RPAR
   46                 | ID • LPAR error RPAR
   47                 | ID • LPAR Expr MethodInvocation2 RPAR
   51 Assignment: ID • ASSIGN Expr
   79 Expr1: ID • DOTLENGTH
   80      | ID •

    DOTLENGTH  shift, and go to state 98
    ASSIGN     shift, and go to state 58
    LPAR       shift, and go to state 59

    $default  reduce using rule 80 (Expr1)


State 65

   83 Expr1: BOOLLIT •

    $default  reduce using rule 83 (Expr1)


State 66

   73 Expr1: NOT • Expr1

    INTLIT    shift, and go to state 62
    REALLIT   shift, and go to state 63
    ID        shift, and go to state 99
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 65
    NOT       shift, and go to state 66
    MINUS     shift, and go to state 67
    PLUS      shift, and go to state 68
    LPAR      shift, and go to state 69

    MethodInvocation  go to state 71
    ParseArgs         go to state 73
    Expr1             go to state 100


State 67

   72 Expr1: MINUS • Expr1

    INTLIT    shift, and go to state 62
    REALLIT   shift, and go to state 63
    ID        shift, and go to state 99
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 65
    NOT       shift, and go to state 66
    MINUS     shift, and go to state 67
    PLUS      shift, and go to state 68
    LPAR      shift, and go to state 69

    MethodInvocation  go to state 71
    ParseArgs         go to state 73
    Expr1             go to state 101


State 68

   74 Expr1: PLUS • Expr1

    INTLIT    shift, and go to state 62
    REALLIT   shift, and go to state 63
    ID        shift, and go to state 99
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 65
    NOT       shift, and go to state 66
    MINUS     shift, and go to state 67
    PLUS      shift, and go to state 68
    LPAR      shift, and go to state 69

    MethodInvocation  go to state 71
    ParseArgs         go to state 73
    Expr1             go to state 102


State 69

   75 Expr1: LPAR • Expr RPAR
   76      | LPAR • error RPAR

    error     shift, and go to state 103
    INTLIT    shift, and go to state 62
    REALLIT   shift, and go to state 63
    ID        shift, and go to state 64
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 65
    NOT       shift, and go to state 66
    MINUS     shift, and go to state 67
    PLUS      shift, and go to state 68
    LPAR      shift, and go to state 69

    MethodInvocation  go to state 71
    Assignment        go to state 72
    ParseArgs         go to state 73
    Expr              go to state 104
    Expr1             go to state 75


State 70

   35 Statement: RETURN SEMICOLON •

    $default  reduce using rule 35 (Statement)


State 71

   77 Expr1: MethodInvocation •

    $default  reduce using rule 77 (Expr1)


State 72

   54 Expr: Assignment •

    $default  reduce using rule 54 (Expr)


State 73

   78 Expr1: ParseArgs •

    $default  reduce using rule 78 (Expr1)


State 74

   34 Statement: RETURN Expr • SEMICOLON

    SEMICOLON  shift, and go to state 105


State 75

   55 Expr: Expr1 •
   56 Expr1: Expr1 • PLUS Expr1
   57      | Expr1 • MINUS Expr1
   58      | Expr1 • STAR Expr1
   59      | Expr1 • DIV Expr1
   60      | Expr1 • MOD Expr1
   61      | Expr1 • AND Expr1
   62      | Expr1 • OR Expr1
   63      | Expr1 • XOR Expr1
   64      | Expr1 • LSHIFT Expr1
   65      | Expr1 • RSHIFT Expr1
   66      | Expr1 • EQ Expr1
   67      | Expr1 • GE Expr1
   68      | Expr1 • GT Expr1
   69      | Expr1 • LE Expr1
   70      | Expr1 • LT Expr1
   71      | Expr1 • NE Expr1

    EQ      shift, and go to state 106
    GE      shift, and go to state 107
    GT      shift, and go to state 108
    LT      shift, and go to state 109
    LE      shift, and go to state 110
    NE      shift, and go to state 111
    AND     shift, and go to state 112
    OR      shift, and go to state 113
    XOR     shift, and go to state 114
    MOD     shift, and go to state 115
    DIV     shift, and go to state 116
    STAR    shift, and go to state 117
    MINUS   shift, and go to state 118
    PLUS    shift, and go to state 119
    LSHIFT  shift, and go to state 120
    RSHIFT  shift, and go to state 121

    $default  reduce using rule 55 (Expr)


State 76

   41 Statement: PRINT LPAR • Expr RPAR SEMICOLON
   42          | PRINT LPAR • STRLIT RPAR SEMICOLON

    INTLIT    shift, and go to state 62
    STRLIT    shift, and go to state 122
    REALLIT   shift, and go to state 63
    ID        shift, and go to state 64
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 65
    NOT       shift, and go to state 66
    MINUS     shift, and go to state 67
    PLUS      shift, and go to state 68
    LPAR      shift, and go to state 69

    MethodInvocation  go to state 71
    Assignment        go to state 72
    ParseArgs         go to state 73
    Expr              go to state 123
    Expr1             go to state 75


State 77

   52 ParseArgs: PARSEINT LPAR • ID LSQ Expr RSQ RPAR
   53          | PARSEINT LPAR • error RPAR

    error  shift, and go to state 124
    ID     shift, and go to state 125


State 78

   43 Statement2: Statement • Statement2

    error      shift, and go to state 33
    ID         shift, and go to state 34
    IF         shift, and go to state 35
    WHILE      shift, and go to state 36
    RETURN     shift, and go to state 37
    PRINT      shift, and go to state 38
    PARSEINT   shift, and go to state 39
    LBRACE     shift, and go to state 40
    SEMICOLON  shift, and go to state 41

    RBRACE  reduce using rule 44 (Statement2)

    Statement         go to state 78
    Statement2        go to state 126
    MethodInvocation  go to state 46
    Assignment        go to state 47
    ParseArgs         go to state 48


State 79

   30 Statement: LBRACE Statement2 • RBRACE

    RBRACE  shift, and go to state 127


State 80

   27 VarDecl: Type ID • VarDecl2 SEMICOLON

    COMMA  shift, and go to state 128

    $default  reduce using rule 29 (VarDecl2)

    VarDecl2  go to state 129


State 81

   23 MethodBody: LBRACE MethodBody2 RBRACE •

    $default  reduce using rule 23 (MethodBody)


State 82

   25 MethodBody2: VarDecl MethodBody2 •

    $default  reduce using rule 25 (MethodBody2)


State 83

   24 MethodBody2: Statement MethodBody2 •

    $default  reduce using rule 24 (MethodBody2)


State 84

   36 Statement: MethodInvocation SEMICOLON •

    $default  reduce using rule 36 (Statement)


State 85

   37 Statement: Assignment SEMICOLON •

    $default  reduce using rule 37 (Statement)


State 86

   38 Statement: ParseArgs SEMICOLON •

    $default  reduce using rule 38 (Statement)


State 87

   20 FormalParams: STRING LSQ • RSQ ID

    RSQ  shift, and go to state 130


State 88

   19 FormalParams: Type ID • FormalParams2

    COMMA  shift, and go to state 131

    $default  reduce using rule 22 (FormalParams2)

    FormalParams2  go to state 132


State 89

   17 MethodHeader: VOID ID LPAR FormalParams RPAR •

    $default  reduce using rule 17 (MethodHeader)


State 90

   10 FieldDecl2: COMMA ID FieldDecl2 •

    $default  reduce using rule 10 (FieldDecl2)


State 91

   15 MethodHeader: Type ID LPAR FormalParams RPAR •

    $default  reduce using rule 15 (MethodHeader)


State 92

   51 Assignment: ID ASSIGN Expr •

    $default  reduce using rule 51 (Assignment)


State 93

   46 MethodInvocation: ID LPAR error • RPAR

    RPAR  shift, and go to state 133


State 94

   45 MethodInvocation: ID LPAR RPAR •

    $default  reduce using rule 45 (MethodInvocation)


State 95

   47 MethodInvocation: ID LPAR Expr • MethodInvocation2 RPAR

    error  shift, and go to state 134
    COMMA  shift, and go to state 135

    RPAR  reduce using rule 50 (MethodInvocation2)

    MethodInvocation2  go to state 136


State 96

   31 Statement: IF LPAR Expr • RPAR Statement ELSE Statement
   32          | IF LPAR Expr • RPAR Statement

    RPAR  shift, and go to state 137


State 97

   33 Statement: WHILE LPAR Expr • RPAR Statement

    RPAR  shift, and go to state 138


State 98

   79 Expr1: ID DOTLENGTH •

    $default  reduce using rule 79 (Expr1)


State 99

   45 MethodInvocation: ID • LPAR RPAR
   46                 | ID • LPAR error RPAR
   47                 | ID • LPAR Expr MethodInvocation2 RPAR
   79 Expr1: ID • DOTLENGTH
   80      | ID •

    DOTLENGTH  shift, and go to state 98
    LPAR       shift, and go to state 59

    $default  reduce using rule 80 (Expr1)


State 100

   56 Expr1: Expr1 • PLUS Expr1
   57      | Expr1 • MINUS Expr1
   58      | Expr1 • STAR Expr1
   59      | Expr1 • DIV Expr1
   60      | Expr1 • MOD Expr1
   61      | Expr1 • AND Expr1
   62      | Expr1 • OR Expr1
   63      | Expr1 • XOR Expr1
   64      | Expr1 • LSHIFT Expr1
   65      | Expr1 • RSHIFT Expr1
   66      | Expr1 • EQ Expr1
   67      | Expr1 • GE Expr1
   68      | Expr1 • GT Expr1
   69      | Expr1 • LE Expr1
   70      | Expr1 • LT Expr1
   71      | Expr1 • NE Expr1
   73      | NOT Expr1 •

    $default  reduce using rule 73 (Expr1)


State 101

   56 Expr1: Expr1 • PLUS Expr1
   57      | Expr1 • MINUS Expr1
   58      | Expr1 • STAR Expr1
   59      | Expr1 • DIV Expr1
   60      | Expr1 • MOD Expr1
   61      | Expr1 • AND Expr1
   62      | Expr1 • OR Expr1
   63      | Expr1 • XOR Expr1
   64      | Expr1 • LSHIFT Expr1
   65      | Expr1 • RSHIFT Expr1
   66      | Expr1 • EQ Expr1
   67      | Expr1 • GE Expr1
   68      | Expr1 • GT Expr1
   69      | Expr1 • LE Expr1
   70      | Expr1 • LT Expr1
   71      | Expr1 • NE Expr1
   72      | MINUS Expr1 •

    $default  reduce using rule 72 (Expr1)


State 102

   56 Expr1: Expr1 • PLUS Expr1
   57      | Expr1 • MINUS Expr1
   58      | Expr1 • STAR Expr1
   59      | Expr1 • DIV Expr1
   60      | Expr1 • MOD Expr1
   61      | Expr1 • AND Expr1
   62      | Expr1 • OR Expr1
   63      | Expr1 • XOR Expr1
   64      | Expr1 • LSHIFT Expr1
   65      | Expr1 • RSHIFT Expr1
   66      | Expr1 • EQ Expr1
   67      | Expr1 • GE Expr1
   68      | Expr1 • GT Expr1
   69      | Expr1 • LE Expr1
   70      | Expr1 • LT Expr1
   71      | Expr1 • NE Expr1
   74      | PLUS Expr1 •

    $default  reduce using rule 74 (Expr1)


State 103

   76 Expr1: LPAR error • RPAR

    RPAR  shift, and go to state 139


State 104

   75 Expr1: LPAR Expr • RPAR

    RPAR  shift, and go to state 140


State 105

   34 Statement: RETURN Expr SEMICOLON •

    $default  reduce using rule 34 (Statement)


State 106

   66 Expr1: Expr1 EQ • Expr1

    INTLIT    shift, and go to state 62
    REALLIT   shift, and go to state 63
    ID        shift, and go to state 99
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 65
    NOT       shift, and go to state 66
    MINUS     shift, and go to state 67
    PLUS      shift, and go to state 68
    LPAR      shift, and go to state 69

    MethodInvocation  go to state 71
    ParseArgs         go to state 73
    Expr1             go to state 141


State 107

   67 Expr1: Expr1 GE • Expr1
